checkpoint/cpWaapJuice/templates/ingress-service.yaml
# The namespace used by the below example resources.
# Need to change namespace if you are using a different namespace.
# To expose the Ingress controller pods, you can use a different service configuration, according to this guide:
# https://docs.nginx.com/nginx-ingress-controller/installation/installation-with-manifests/
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-controller-service
  namespace: default
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "tcp"
    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: "*"
spec:
  type: LoadBalancer 
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    nodePort: 30443
    protocol: TCP
    name: https
  selector:
    app: nginx-ingress
