checkpoint/cpWaapJuice/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-configuration
spec:
  rules:
  - host: juice-shop.checkpoint.com 
    http:
      paths:
      - path: /
        backend:
          serviceName: juice-shop
          servicePort: 8080
